@@ -77,6 +77,8 @@ from .cursor import (
     RE_SQL_INSERT_STMT,
     RE_SQL_INSERT_VALUES,
     RE_SQL_ON_DUPLICATE,
+    RE_SQL_PYTHON_CAPTURE_PARAM_NAME,
+    RE_SQL_PYTHON_REPLACE_PARAM,
     RE_SQL_SPLIT_STMTS,
 )
 from .errorcode import CR_NO_RESULT_SET
@@ -1095,7 +1097,7 @@ class CMySQLCursorPrepared(CMySQLCursor):
     def execute(
         self,
         operation: StrOrBytes,
-        params: Optional[ParamsSequenceType] = None,
+        params: Optional[ParamsSequenceOrDictType] = None,
         multi: bool = False,
     ) -> None:  # multi is unused
         """Prepare and execute a MySQL Prepared Statement
@@ -1119,23 +1121,40 @@ class CMySQLCursorPrepared(CMySQLCursor):
 
         self._cnx.handle_unread_result(prepared=True)
 
+        charset = self._cnx.charset
+        if charset == "utf8mb4":
+            charset = "utf8"
+
+        if not isinstance(operation, str):
+            try:
+                operation = operation.decode(charset)
+            except UnicodeDecodeError as err:
+                raise ProgrammingError(str(err)) from err
+
+        if isinstance(params, dict):
+            replacement_keys = re.findall(RE_SQL_PYTHON_CAPTURE_PARAM_NAME, operation)
+            try:
+                # Replace params dict with params tuple in correct order.
+                params = tuple(params[key] for key in replacement_keys)
+            except KeyError as err:
+                raise ProgrammingError(
+                    "Not all placeholders were found in the parameters dict"
+                ) from err
+            # Convert %(name)s to ? before sending it to MySQL
+            operation = re.sub(RE_SQL_PYTHON_REPLACE_PARAM, "?", operation)
+
         if operation is not self._executed:
             if self._stmt:
                 self._cnx.cmd_stmt_close(self._stmt)
-
             self._executed = operation
 
             try:
-                if not isinstance(operation, bytes):
-                    charset = self._cnx.charset
-                    if charset == "utf8mb4":
-                        charset = "utf8"
-                    operation = operation.encode(charset)
-            except (UnicodeDecodeError, UnicodeEncodeError) as err:
+                operation = operation.encode(charset)
+            except UnicodeEncodeError as err:
                 raise ProgrammingError(str(err)) from err
 
-            # need to convert %s to ? before sending it to MySQL
             if b"%s" in operation:
+                # Convert %s to ? before sending it to MySQL
                 operation = re.sub(RE_SQL_FIND_PARAM, b"?", operation)
 
             try:
